--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,11 +63,17 @@ figure {
     font-size: .75rem;
 }
 
-.btn-warning:focus, .btn-info:focus, .btn-danger:focus, .btn-success:focus, .btn-primary:focus {
+.btn-warning:focus,
+.btn-info:focus,
+.btn-danger:focus,
+.btn-success:focus,
+.btn-primary:focus {
     box-shadow: none;
 }
 
-#more-gifs, #clear-gifs, #clear-storage {
+#more-gifs,
+#clear-gifs,
+#clear-storage {
     visibility: hidden;
 }
 
@@ -83,4 +89,44 @@ figure {
 
 .modal-body p {
     margin: 0;
+}
+
+@media screen and (min-width: 320px) and (max-width: 414px) {
+    .container {
+        padding: 0;
+    }
+
+    .title {
+        font-size: 2.5rem;
+        padding: .5rem;
+        padding-left: 0;
+    }
+
+    .title-gif {
+        margin-right: -3.25rem;
+        width: 25%;
+    }
+
+    #letter3 {
+        margin-right: -2rem;
+    }
+
+    #current-conditions {
+        font-size: 1rem;
+        height: fit-content;
+        margin: 0rem 1rem 1rem 1rem;
+    }
+
+    .btn-warning, .btn-primary, #clear-storage {
+        padding: .25rem .25rem;
+    }
+
+    .btn-lg {
+        padding: .25rem .25rem;
+        font-size: .75rem;
+    }
+    
+    figure {
+        width: 45% !important;
+    }
 }
